Proyecto Final Brunin

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <li><a href="secciones/hojablanda.html">Hoja Blanda</a></li>
             </ul>
           </li>
-          <li><a href="secciones/calculadora.html">Calculadora</a></li>
+          <li><a href="secciones/contacto.html">Contacto</a></li>
         </ul>
       </nav>
     </header>
