--- a/secciones/hojablanda.html
+++ b/secciones/hojablanda.html
@@ -23,7 +23,7 @@
             </ul>
           </li>
 
-          <li><a href="calculadora.html">Calculadora</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
         </ul>
       </nav>
     </header>
