--- a/secciones/hojarigida.html
+++ b/secciones/hojarigida.html
@@ -24,7 +24,7 @@
             </ul>
           </li>
 
-          <li><a href="calculadora.html">Calculadora</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
         </ul>
       </nav>
     </header>
